chore(sonar): resolve S1192, S1172 and S6885 from the v0.18.56 analysis
- ToolCallLoopRunner: one NO_MODEL_CONFIGURED constant for the four
  requireNonNull messages (java:S1192); drop the effectiveModelIdForCall
  parameter that retryEmptyContinuation stopped using when JCLAW-1203
  moved the provider call into retrySynthesis (java:S1172).
- ToolResultPruner: Math.clamp for the cutoff (java:S6885). Safe because
  lastUserIndex never returns below 0, so the bounds cannot invert.

Marked in Sonar without code: S2637 and S3077 false-positive (record
accessor re-read after a null guard; a volatile handle only reassigned
under the class's own lock), S135 accepted (project-wide verdict).
No hotspots to review; no file above the 60% duplication bar.

play autotest in the worktree: 555 classes passed.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01EYFPP1Zef2Rm62jP99gPyq